# Threadopolis

./: CHANGELOG.md  LICENSE  README.md  agents.md  pyproject.toml
examples/html/output/: Conversation.md
response_from_codex/: turn004_yes-a-few-days-is-often.md
src/knotly/: __init__.py  cli.py  console.py
src/threadopolis/: cli.py  pipeline.py
src/threadopolis/parsers/: html_input.py
src/threadopolis/renderers/: parent.py  turn.py
tests/: test_html_parser.py  test_knotly.py  test_threadopolis.py
tests/golden/html/: turn001_hello-any-updates.md  turn002_yes-the-docs-are-live-at.md
