[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "knotly"
version = "0.1.0"
description = "Reorganizing conversations into knots of thought."
readme = "README.md"
authors = [{name = "knotly Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
knotly = "knotly.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
